@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>508 120 356 240 0 0 1280 1002 </string>
+	<string>-6 141 356 240 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
-	<string>283.0</string>
+	<string>286.0</string>
 	<key>IBLockedObjects</key>
 	<array>
 		<integer>164</integer>
@@ -13,7 +13,6 @@
 	<key>IBOpenObjects</key>
 	<array>
 		<integer>5</integer>
-		<integer>168</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>6F21</string>
